--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto Mono', monospace;
     font-family: 'Source Sans Pro', sans-serif;
-    margin: 0
+    margin: 0px
 }
 
 h1 {
@@ -17,11 +17,12 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .pori {
     width: 50%;
-    padding-left: 5%;
+    padding: 5%;
 }
 
 .pori img {
@@ -40,4 +41,10 @@ section {
 .top {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big2 {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
