--- a/style.css
+++ b/style.css
@@ -15,17 +15,18 @@ h1 {
     color: orange;
 }
 
-section {
+.flexible-continar {
     display: flex;
     margin-bottom: 150px;
 }
 
-.pori {
+.half-width {
+
     width: 50%;
     padding: 5%;
 }
 
-.pori img {
+.half-width img {
     width: 100%;
 }
 
@@ -47,4 +48,40 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.last {
+    background-image: url(images/exp-bg.png);
+}
+
+.Exprences- {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+
+}
+
+h2 {
+    font-size: 40px;
+}
+
+.last {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.last-second-pera {
+    border-left: 5px solid;
+    border-image: linear-gradient(salmon, tomato);
+    border-image-slice: 1;
+}
+
+.last-pera {
+    border-left: 5px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
 }
